<resources>
    <string name="app_name">DadosPessoais</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="idade">Idade</string>
    <string name="enviar">Enviar</string>
    <string name="dados_recebidos_com_sucesso">Dados recebidos com sucesso!</string>
    <string name="preencha_os_dados_pessoais">Preencha os Dados Pessoais</string>
    <string name="nome_obrigatorio">Por favor introduza o nome</string>
    <string name="email_obrigatorio">Por favor introduza o email</string>
    <string name="telefone_obrigatorio">Por favor introduza o telefone</string>
    <string name="idade_obrigatorio">Por favor introduza a idade</string>
</resources>